# stars-treat-sim-vidigi-demo

./: CHANGES.md  CITATION.cff  README.md  pyproject.toml
.github/workflows/: python-publish.yml
binder/: environment.yml
notebooks/: test_package.ipynb
tests/: test_datasets.py  test_model.py
treat_sim/: __init__.py  model.py
treat_sim_vidigi/: __init__.py  model.py
