[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "treat-sim-vidigi"
dynamic = ["version"]
description = "A Python Free and Open Source Software implementation of the Treatment Centre Model from Nelson (2013) - with animation"
readme = "README.md"
license = "MIT"
requires-python = ">=3.8.19"
authors = [
    { name = "Thomas Monks", email = "forecast-tools@gmail.com" },
    { name = "Sammi Rosser", email = "hi@sammirosser.com" },
]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "matplotlib>=3.3.4",
    "numpy>=1.19.2",
    "pandas>=1.2.3",
    "scipy>=1.6.1",
    "simpy>=4.0.1",
    "vidigi>=1.0.0",
    "nbformat>=4.2.0"
]

[project.urls]
Homepage = "https://github.com/pythonhealthdatascience/stars-treat-sim"
"Bug Tracker" = "https://github.com/pythonhealthdatascience/stars-treat-sim"
Documentation = "https://pythonhealthdatascience.github.io/stars-simpy-example-docs/"

[tool.hatch.version]
path = "treat_sim_vidigi/__init__.py"

[tool.hatch.build.targets.sdist]
include = [
    "/treat_sim_vidigi",
]
